--- a/index.html
+++ b/index.html
@@ -19,30 +19,84 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+      <p>instaRaider.py</p>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<h1>
+<a id="instaraider" class="anchor" href="#instaraider" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>InstaRaider</h1>
+
+<h1></h1>
+
+<p><strong>NOTE ABOUT FUTURE MAINTENANCE:</strong></p>
+
+<p><strong>5-27-2016:</strong> I started this project more than two years ago because I simply needed a quick script to download all of my Instagram photos. Since then it's been cloned thousands of times and used for awesome stuff like quickly gathering lots of images to train machine learning algorithms and probably not-so-awesome stuff like downloading Instagram model pictures. I'm glad that people have found it useful and have forked InstaRaider and contributed over that time, however, I don't have the time or the interest in continuing to maintain this project. As with any web scrapping application, stuff is bound to change and break over time. I will still accept pull requests that fix any major issues, but if somebody else is interested in taking over this project please let me know. I have opened an issue (<a href="https://github.com/akurtovic/InstaRaider/issues/65">https://github.com/akurtovic/InstaRaider/issues/65</a>) to be used for disucssion.</p>
+
+<hr>
+
+<p><strong>DISCLAIMER:</strong></p>
+
+<p>This code is posted for informational purposes only. Use of Instagram is governed by the company's Terms of Use (<a href="http://instagram.com/legal/terms/">http://instagram.com/legal/terms/</a>). Any user content posted to Instagram is governed by the Privacy Policy (<a href="http://instagram.com/legal/privacy/">http://instagram.com/legal/privacy/</a>). While I will make all attempts to ensure that InstaRaider works as described below, any future changes to Instragram may introduce errors. If you find a bug or notice that InstaRaider is not working, please create a New Issue on Github</p>
+
+<hr>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="instaraider-1" class="anchor" href="#instaraider-1" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>InstaRaider</h3>
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>InstaRaider is a Instagram archiving tool that downloads all photos for any Instagram user.
+InstaRaider can download all photos for any public Instagram profile without relying on API calls or user authentication. </p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="installation-ubuntudebian" class="anchor" href="#installation-ubuntudebian" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Installation (Ubuntu/Debian)</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>This ensures that all dependencies are satisfied on Ubuntu/Debian</p>
+
+<pre><code>sudo apt-get update
+sudo apt-get install python-pip python git
+sudo pip install urllib3
+sudo apt-get install python-bs4 python-pip python git
+sudo pip install selenium requests
+git clone https://github.com/akurtovic/InstaRaider
+cd InstaRaider
+</code></pre>
+
+<p>Some older versions of selenium which come bundled with Ubuntu/Debian contain bugs. If InstaRaider fails due to selenium or firefox driver issues, update selenium with:</p>
+
+<pre><code>sudo pip install -u selenium
+</code></pre>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>The first time you use InstaRaider for a specific username, it will download all the photos on that user's profile.
+On subsequent uses, InstaRaider will only download new photos (unless you rename or remove the photos from the Images directory for that specific username). </p>
+
+<div class="highlight highlight-source-python"><pre>usage: instaRaider.py [<span class="pl-k">-</span>h] [<span class="pl-k">-</span>n imageCount] <span class="pl-c1">USERNAME</span> .<span class="pl-k">/</span><span class="pl-c1">DIRECTORY</span><span class="pl-k">/</span><span class="pl-c1">TO</span><span class="pl-k">/</span><span class="pl-c1">SAVE</span><span class="pl-k">/</span><span class="pl-c1">IMAGES</span></pre></div>
+
+<h3>
+<a id="output" class="anchor" href="#output" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Output:</h3>
+
+<pre><code>$ python instaRaider.py -n 100 username ./images/username
+username has 263 posts on Instagram.
+The first 100 of them will be downloaded.
+Loading Instagram profile...
+Saving photos to ./images/username
+Downloaded file 1/100 (123.jpg).
+Downloaded file 2/100 (456.jpg).
+...
+Downloaded file 100/100 (789.jpg).
+Saved 100 files to ./images/username
+</code></pre>
+
+<h3>
+<a id="multiprocessing-performance" class="anchor" href="#multiprocessing-performance" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Multiprocessing performance</h3>
+
+<p>After 3 independent tests ran on the same machine, for a profile with 565 posts, the script took the following time to run depending on the number of processes ran:</p>
+
+<p><a href="http://www.imagebam.com/image/ac20ba470493435"><img src="http://thumbnails113.imagebam.com/47050/ac20ba470493435.jpg" alt="imagebam.com"></a> </p>
+
+<h3>
+<a id="license" class="anchor" href="#license" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>License:</h3>
+
+<p>Copyright (c) 2014-2015 Amir Kurtovic. See the LICENSE file for license rights and limitations (MIT).</p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/sqaaaaak/InstaRaider">Instaraider</a> is maintained by <a href="https://github.com/sqaaaaak">sqaaaaak</a>.</span>
